refactor: remove redundant JVM explanation and add local testing section with example code